# CubicLauncher

./: .gitignore  package.json  svelte.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.js  vite.config.ts
src/: App.svelte  App.vue  api.ts  main.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/minecraft-launcher-core/: .prettierrc.toml  Cargo.toml  README.md
src-tauri/crates/minecraft-launcher-core/.github/workflows/: rust.yml
src-tauri/crates/minecraft-launcher-core/examples/: start_game.rs
src-tauri/crates/minecraft-launcher-core/src/: lib.rs
src-tauri/crates/minecraft-launcher-core/src/bootstrap/: argument_substitutor.rs  auth.rs  error.rs  mod.rs  options.rs  process.rs
src-tauri/crates/minecraft-launcher-core/src/java_manager/: downloadable.rs  error.rs  index.rs  manifest.rs  mod.rs
src-tauri/crates/minecraft-launcher-core/src/json/: date.rs  env_features.rs  minecraft_version.rs  mod.rs  release_type.rs  sha1_checksum.rs  version_info.rs
src-tauri/crates/minecraft-launcher-core/src/json/manifest/: argument.rs  artifact.rs  assets.rs  download.rs  java.rs  library.rs  logging.rs  mod.rs  rule.rs
src-tauri/crates/minecraft-launcher-core/src/tests/: mod.rs
src-tauri/crates/minecraft-launcher-core/src/version_manager/: error.rs  mod.rs  utils.rs
src-tauri/crates/minecraft-launcher-core/src/version_manager/downloader/: download_job.rs  error.rs  mod.rs  utils.rs
src-tauri/crates/minecraft-launcher-core/src/version_manager/downloader/downloadables/: asset.rs  checksummed.rs  error.rs  etag.rs  mod.rs  prehashed.rs
src-tauri/crates/minecraft-launcher-core/src/version_manager/downloader/progress/: callback.rs  empty.rs  mod.rs
src-tauri/crates/minecraft-launcher-core/src/version_manager/remote/: mod.rs  raw_version_list.rs
src-tauri/crates/proton/: Cargo.toml
src-tauri/crates/proton/src/: lib.rs  main.rs
src-tauri/crates/proton/src/downloaders/: mod.rs
src-tauri/crates/proton/src/errors/: mod.rs
src-tauri/crates/proton/src/manifest/: mod.rs
src-tauri/crates/proton/src/types/: mod.rs
src-tauri/crates/proton/src/utilities/: mod.rs
src-tauri/src/: lib.rs  main.rs
src-tauri/src/customization/: mod.rs  tauri.rs  types.rs
src-tauri/src/customization/themes/: loader.rs  mod.rs  writter.rs
src-tauri/src/discord/: mod.rs
src-tauri/src/error/: mod.rs
src-tauri/src/instances/: mod.rs
src-tauri/src/models/: errors.rs  instances.rs  mod.rs
src-tauri/src/paths/: mod.rs
src-tauri/src/types/: mod.rs
src-tauri/src/window/: mod.rs
src/assets/: Logo.svelte  logo.vue
src/assets/css/: index.css
src/components/layout/: Main.vue  Titlebar.vue
src/css/: Welcome.scss  main.scss  sidebar.scss  titlebar.scss
src/cubic/: types.ts
src/lib/: utils.ts
src/routes/: +layout.ts  +page.svelte
src/stores/: LanguageStore.ts  LauncherStore.ts
(+64 files in other folders)
