[package]
name = "cubic-launcher"
version = "0.1.0"
description = "A Tauri App"
authors = ["Santiagolxx", "CubicLauncher Team"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cubic_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
proton = { git = "https://github.com/CubicLauncher/proton.git" }
communicator = { git = "https://github.com/santiagolxx/Communicator.git" }
better-panic = "0.3.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tokio = { version = "1.45.1", features = ["full"] }
once_cell = "1.21.3"
anyhow = "1.0.98"
thiserror = "2.0.12"
bincode = "2.0.1"
lz4_flex = "0.11.5"
blake3 = "1.8.2"
