[package]
name = "minecraft-launcher-core"
version = "2.0.0"
edition = "2021"
license = "Apache-2.0"

[features]
default = ["json", "bootstrap", "version_manager", "java_manager"]
json = []
bootstrap = []
version_manager = []
java_manager = ["version_manager", "dep:lzma-rs"]

[dependencies]
async-recursion = "1.0.5"
async-trait = "0.1.75"
chrono = { version = "0.4.31", features = ["serde"] }
hex = "0.4.3"
log = "0.4.20"
os_info = "3.7.0"
regex = "1.10.2"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sha1 = "0.10.6"
thiserror = "1.0.51"
tokio = { version = "1.38.0", features = ["macros", "rt", "rt-multi-thread"] }
futures = "0.3.30"
uuid = { version = "1.6.1", features = ["v3"] }
zip = "2.1.3"
libflate = "2.0.0"
derive_builder = "0.20.0"
base64 = "0.22.1"
md-5 = "0.10.6"
lzma-rs = { version = "0.3.0", optional = true }

[dev-dependencies]
simple_logger = { version = "5.0.0", features = ["colors"] }
